# ai-engine-sdk-python

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  add_permissions.py  pyproject.toml  run_example.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: ci-sdk-tests.yaml
ai_engine_sdk/: __init__.py  client.py  llm_models.py
ai_engine_sdk/api_models/: agents_json_messages.py  api_message.py  api_models.py  parsing_utils.py
ai_engine_sdk/use_cases/: create_function_group_and_share.py
ai_engine_sdk_py/: api_models.py  client.py  messages.py  run_example.py  ~alias_models_pydantic.py
ai_engine_sdk_py/api_models/: agents_json_messages.py  agents_messages.py  api_message.py  api_models.py  parsing_utils.py
examples/: execute_function.py  functions_by_function_group.py  get_function_from_function_group_name.py  list_function_groups_by.py  list_function_groups_by_user_sdk.py  list_user_functions.py  run_example.py  share_function_group.py
pending-unknown-json-to implement/: date-type.json
tests/: conftest.py
tests/integration/: test_ai_engine_client.py  test_session.py
tests/test_doubles/: __init__.py
use_cases/py_scripts/: create_function_group_and_share.py
