[tool.poetry]
name = "ai-engine-sdk"
version = "0.1.0"
description = ""
authors = ["Xavier <xavier.peiro@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.7.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
