[tool.poetry]
name = "ai-engine-sdk"
version = "0.1.1"
description = ""
authors = ["Xavier <xavier.peiro@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^1.10.7"
aiohttp = "^3.9.5"
python-dotenv = ">=1.0.1,<1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
